--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
 <!-- Berita -->
 <div id="berita" class="content-section">
   <div style="background:#fff;padding:3rem;border-radius:20px;margin:2rem;text-align:center">
-    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500"
-    margin-bottom: 1rem;>
      <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
-    <p style="color:#666;font-size:1.2rem">FOTO BERSAMA SETELAH MELAKSANAKAN UPACARA HARI PRAMUKA
+    <p style="color:#666;font-size:1.2rem">Berita terbaru akan ditampilkan disini. Stay tuned</p>
   </div>
 </div>
 
@@ -335,3 +333,4 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
+
