update foto berita

--- a/index.html
+++ b/index.html
@@ -137,11 +137,14 @@
 </div>
 
 <!-- Berita -->
-<div id="berita" class="content-section">
-  <div style="background:#fff;padding:3rem;border-radius:20px;margin:2rem;text-align:center">
-     <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
-    <p style="color:#666;font-size:1.2rem">Berita terbaru akan ditampilkan disini. Stay tuned</p>
-  </div>
+<div id="berita" class="content-section" style="background:#fff; padding:3rem; border-radius:20px; margin:2rem">
+    <h2 style="color:#676cea; margin-bottom:1rem; text-align:center">BERITA DEWAN PENGGALANG</h2>
+
+    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500" alt="Foto Berita DP" style="width:100%; max-width:600px; height:auto; display:block; margin:0 auto 1rem; border-radius:12px; object-fit:cover;">
+
+    <p style="color:#666; font-size:1.2rem; text-align:center">
+        Berita terbaru akan ditampilkan disini. Stay tuned
+    </p>
 </div>
 
 <!-- Event -->
@@ -300,7 +303,7 @@ const data = {
     'Konsumsi – menyiapkan makanan dan minuman saat kegiatan.',
     'Kesehatan (menyiapkan P3K, memastikan peserta sehat dan aman)',
     'Kenyamanan (menata tempat, memastikan semua anggota merasa diperhatikan)',
-    'Di Dewan Penggalang, divisi Kesra biasanya singkatan dari Kesejahteraan Rakyat.Tugasnya berhubungan dengan pemenuhan kebutuhan dan kenyamanan anggota saat kegiatan berlangsung.'
+    'Di Dewan Penggalang, divisi Kesra singkatan dari Kesejahteraan Rakyat.Tugasnya berhubungan dengan pemenuhan kebutuhan dan kenyamanan anggota saat kegiatan berlangsung.'
   ]
 };
 
@@ -333,4 +336,5 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
+
 
