--- a/index.html
+++ b/index.html
@@ -165,8 +165,15 @@
 <div id="kontak" class="content-section">
   <div class="contact-section">
     <h2>KONTAK KAMI</h2>
+   <div id="kontak" class="content-section">
+  <div class="contact-section">
+    <h2>KONTAK KAMI</h2>
     <div class="contact-links">
-      <a href="https://www.instagram.com/spartascouting" class="contact-item" target="_blank"><i class="fab fa-instagram"></i><span>@spartascouting</span></a>
+  <a href="instagram://user?username=spartascouting"
+   onclick="window.location='https://www.instagram.com/spartascouting'"
+   
+   class="contact-item fab fa-instagram"></i> IG : SPARTA SCOUTING
+</a>    
       <a href="https://wa.me/6281234567890" class="contact-item" target="_blank"><i class="fab fa-whatsapp"></i><span>+62 812-3456-7890</span></a>
     </div>
     <p style="margin-top:2rem;color:#666">Jl. Tropodo NO 685, Mergelo,kec.magersari,kota mojokerto, Jawa Timur 61315</p>
@@ -336,6 +343,7 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
+
 
 
 
