Update index.html all

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
 </div>
 
 <!-- Berita -->
-<div id="berita" class="content-section" style="background:#fff; padding:3rem; border-radius:20px; margin:2rem">
-    <h2 style="color:#676cea; margin-bottom:1rem; text-align:center">BERITA DEWAN PENGGALANG</h2>
-
-    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500" alt="Foto Berita DP" style="width:100%; max-width:600px; height:auto; display:block; margin:0 auto 1rem; border-radius:12px; object-fit:cover;">
-
-    <p style="color:#666; font-size:1.2rem; text-align:center">
-        Berita terbaru akan ditampilkan disini. Stay tuned
-    </p>
+<div id="berita" class="content-section">
+  <div style="background:#fff;padding:3rem;border-radius:20px;margin:2rem;text-align:center">
+     <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
+    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500"
+   style="max-width:100%; height:auto;"
+   alt="foto">
+    <p style="color:#666;font-size:1.2rem">FOTO BERSAMA SETELAH MELAKSANAKAN UPACARA HARI PRAMUKA
+  </div>
 </div>
 
 <!-- Event -->
@@ -162,16 +162,28 @@
 </div>
 
 <!-- Kontak -->
-   <div id="kontak" class="content-section">
+<div id="kontak" class="content-section">
   <div class="contact-section">
     <h2>KONTAK KAMI</h2>
     <div class="contact-links">
   <a href="instagram://user?username=spartascouting"
-   onclick="window.location='https://www.instagram.com/spartascouting"
+   onclick="window.location='https://www.instagram.com/spartascouting'"
+   
    class="contact-item fab fa-instagram"></i> IG : SPARTA SCOUTING
-      <a href="https://wa.me/6281234567890" class="contact-item" target="_blank"><i class="fab fa-whatsapp"></i><span>+62 812-3456-7890</span></a>
+</a>    
+<!--whatsapp-->
+   
+   <div class="contact-links">
+<a href="https://wa.me/6285852084287"  
+   onclick="window.location='https://wa.me/6285852084287'"
+   style="background-color:#25D366; color:white; padding:10px 20px; border-radius:8px; text-decoration:none; display:inline-block;">
+   <i class="fab fa-whatsapp"></i> Hubungi via WhatsApp :
+     0858-5208-4287
+</a>
+
     </div>
-    <p style="margin-top:2rem;color:#666">Jl. Tropodo NO 685, Mergelo,kec.magersari,kota mojokerto, Jawa Timur 61315</p>
+    <p style="margin-top:1rem;color:#666">Jl.Tropodo No.685,Mergelo,Meri,Kec.Magersari,
+                    Kota Mojokerto,Jawa Timur 61315</p>
   </div>
 </div>
 
@@ -305,7 +317,7 @@ const data = {
     'Konsumsi – menyiapkan makanan dan minuman saat kegiatan.',
     'Kesehatan (menyiapkan P3K, memastikan peserta sehat dan aman)',
     'Kenyamanan (menata tempat, memastikan semua anggota merasa diperhatikan)',
-    'Di Dewan Penggalang, divisi Kesra singkatan dari Kesejahteraan Rakyat.Tugasnya berhubungan dengan pemenuhan kebutuhan dan kenyamanan anggota saat kegiatan berlangsung.'
+    'Di Dewan Penggalang, divisi Kesra biasanya singkatan dari Kesejahteraan Rakyat.Tugasnya berhubungan dengan pemenuhan kebutuhan dan kenyamanan anggota saat kegiatan berlangsung.'
   ]
 };
 
@@ -338,11 +350,3 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
