--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div id="beranda" class="content-section active">
   <div class="hero">
   <div style="display:flex; justify-content:center; gap:40px; align-items:center; flex-wrap:wrap;">
-    <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Logo Sparta Scout" style="width:150px; height:auto; border-radius:10px;">
+    <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Logo Sparta Scout" style="width:150px; height:auto; border-radius:10px;">
     <img src="https://images.unsplash.com/photo-1754743146290-949a949c422f?w=500" alt="Logo SMPIT Permata" style="width:150px; height:auto; border-radius:10px;">
   </div>
   <h1>Selamat Datang di DEWAN PENGGALANG SMPIT PERMATA MOJOKERTO</h1>
@@ -83,35 +83,35 @@
     <div class="divisions-grid">
       <!-- 8 kartu divisi -->
       <div class="division-card" onclick="openModal('bph')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="BPH">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="BPH">
         <h3>BADAN PENGURUS HARIAN (BPH)</h3>
       </div>
       <div class="division-card" onclick="openModal('teknik')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Teknik">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Teknik">
         <h3>DIVISI TEKNIK KEPRAMUKAAN</h3>
       </div>
       <div class="division-card" onclick="openModal('upacara')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Upacara">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Upacara">
         <h3>DIVISI UPACARA</h3>
       </div>
       <div class="division-card" onclick="openModal('perlengkapan')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Perlengkapan">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Perlengkapan">
         <h3>DIVISI PERLENGKAPAN</h3>
       </div>
       <div class="division-card" onclick="openModal('dokumentasi')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Dokumentasi">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Dokumentasi">
         <h3>DIVISI DOKUMENTASI</h3>
       </div>
       <div class="division-card" onclick="openModal('entrepreneur')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Entrepreneur">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Entrepreneur">
         <h3>DIVISI ENTREPRENEUR</h3>
       </div>
       <div class="division-card" onclick="openModal('seni')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Seni">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Seni">
         <h3>DIVISI SENI & BUDAYA</h3>
       </div>
       <div class="division-card" onclick="openModal('kesra')">
-        <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Kesra">
+        <img src="https://images.unsplash.com/photo-1754658440841-2a9a81219c59?w=500" alt="Kesra">
         <h3>DIVISI KESRA</h3>
       </div>
     </div>
@@ -139,10 +139,9 @@
 <!-- Berita -->
 <div id="berita" class="content-section">
   <div style="background:#fff;padding:3rem;border-radius:20px;margin:2rem;text-align:center">
-     <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
     <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500"
-   style="max-width:100%; height:auto;"
-   alt="foto">
+    margin-bottom: 1rem;>
+     <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
     <p style="color:#666;font-size:1.2rem">FOTO BERSAMA SETELAH MELAKSANAKAN UPACARA HARI PRAMUKA
   </div>
 </div>
@@ -166,24 +165,18 @@
   <div class="contact-section">
     <h2>KONTAK KAMI</h2>
     <div class="contact-links">
-  <a href="instagram://user?username=spartascouting"
+        <a href="instagram://user?username=spartascouting"
    onclick="window.location='https://www.instagram.com/spartascouting'"
    
-   class="contact-item fab fa-instagram"></i> IG : SPARTA SCOUTING
-</a>    
-<!--whatsapp-->
-   
-   <div class="contact-links">
-<a href="https://wa.me/6285852084287"  
+   class="contact-item fab fa-instagram"></i> IG : SPARTA SCOUTING</a>    
+      <a href="https://wa.me/6285852084287"  
    onclick="window.location='https://wa.me/6285852084287'"
    style="background-color:#25D366; color:white; padding:10px 20px; border-radius:8px; text-decoration:none; display:inline-block;">
    <i class="fab fa-whatsapp"></i> Hubungi via WhatsApp :
      0858-5208-4287
 </a>
-
     </div>
-    <p style="margin-top:1rem;color:#666">Jl.Tropodo No.685,Mergelo,Meri,Kec.Magersari,
-                    Kota Mojokerto,Jawa Timur 61315</p>
+    <p style="margin-top:2rem;color:#666">Jl. Tropodo NO 685, Mergelo,kec.magersari,kota mojokerto, Jawa Timur 61315</p>
   </div>
 </div>
 
@@ -350,4 +343,3 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
-
