--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 <!-- Berita -->
 <div id="berita" class="content-section">
   <div style="background:#fff;padding:3rem;border-radius:20px;margin:2rem;text-align:center">
-    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500"
-    margin-bottom: 1rem;>
+    <img src="https://images.unsplash.com/photo-1755263771373-9e49d060947e?w=500"alt=FOTO
+     style="width: 100%; height: auto; border-radius: 20px; margin-bottom: 1.2rem;">
      <h2 style="color:#667eea;margin-bottom:1rem">BERITA DEWAN PENGGALANG</h2>
     <p style="color:#666;font-size:1.2rem">FOTO BERSAMA SETELAH MELAKSANAKAN UPACARA HARI PRAMUKA
   </div>
@@ -343,4 +343,5 @@ window.onclick = e => e.target === document.getElementById('modal') && closeModa
 </script>
 </body>
 </html>
+
 
