--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="p-6">
                             <span class="text-sm text-gray-500">29 Agustus 2025</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">SELAMAT ATAS DILANTIK NYA DEWAN PENGGALANG MASA BAKTI 2025-2026</h3>
-                            <p class="text-gray-700 mb-4">Selamat & Sukses Atas dilantiknya 54 Dewan Penggalang SMPIT atas dilantiknya Permata Masa Bakti 2025/2026 dewan
+                            <p class="text-gray-700 mb-4">Selamat & Sukses Atas dilantiknya 54 Dewan Penggalang SMPIT Permata Masa Bakti 2025/2026 dewan
 Semoga para pengurus yang baru dilantik
 senantiasa diberikan kekuatan, semangat, dan keikhlasan dalam mengemban amanah. Jadilah generasi yang berjiwa pemimpin, penuh
 tanggung jawab, serta mampu menjadi teladan dalam kedisiplinan, kerja sama, dan prestasi.
@@ -856,5 +856,6 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
