--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body class="bg-amber-50 font-sans">
     <!-- Header -->
-    <header class="bg-green-800 text-white sticky top-0 z-50 shadow-md">
+    <header class="bg-amber-800 text-white sticky top-0 z-50 shadow-md">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Logo SMPIT PERMATA" class="h-12 mr-3">
@@ -88,7 +88,7 @@
             </div>
 
             <!-- Quick Info -->
-            <div class="bg-green-700 text-white py-8">
+            <div class="bg-amber-800 text-white py-8">
                 <div class="container mx-auto px-4">
                     <div class="grid md:grid-cols-3 gap-6 text-center">
                         <div class="bg-green-800 p-6 rounded-lg shadow-md">
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
