--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
 
             <!-- Quick Info -->
-            <div class="bg-amber-800 text-white py-8">
+            <div class="bg-white-800 text-white py-8">
                 <div class="container mx-auto px-4">
                     <div class="grid md:grid-cols-3 gap-6 text-center">
                         <div class="bg-green-800 p-6 rounded-lg shadow-md">
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
