--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
         <!-- Kontak Page -->
         <section id="kontak-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Hubungi Kami</h2>
+                <h2 class="text-3xl font-bold text-amber-800 mb-8 text-center">Hubungi Kami</h2>
                 
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- Contact Info -->
@@ -689,7 +689,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
                         
                         <div class="space-y-4">
                             <div class="flex items-start">
-                                <div class="bg-amber-800 p-3 rounded-full mr-4">
+                                <div class="bg-white-100 p-3 rounded-full mr-4">
                                     <i class="fas fa-school text-green-700 text-xl"></i>
                                 </div>
                                 <div>
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
