--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
         <!-- Kontak Page -->
         <section id="kontak-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-amber-800 mb-8 text-center">Hubungi Kami</h2>
+                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Hubungi Kami</h2>
                 
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- Contact Info -->
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
