--- a/index.html
+++ b/index.html
@@ -680,12 +680,12 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
         <!-- Kontak Page -->
         <section id="kontak-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Hubungi Kami</h2>
+                <h2 class="text-3xl font-bold text-green-700 mb-8 text-center">Hubungi Kami</h2>
                 
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- Contact Info -->
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <h3 class="text-2xl font-bold text-amber-700 mb-4">Informasi Kontak</h3>
+                        <h3 class="text-2xl font-bold text-green-700 mb-4">Informasi Kontak</h3>
                         
                         <div class="space-y-4">
                             <div class="flex items-start">
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
