--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
                         
                         <div class="space-y-4">
                             <div class="flex items-start">
-                                <div class="bg-white-100 p-3 rounded-full mr-4">
+                                <div class="bg-green-100 p-3 rounded-full mr-4">
                                     <i class="fas fa-school text-green-700 text-xl"></i>
                                 </div>
                                 <div>
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
