--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </main>
 
     <!-- Footer -->
-    <footer class="bg-green-900 text-white py-8">
+    <footer class="bg-amber-800 text-white py-8">
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
