--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
             <div class="bg-white-800 text-white py-8">
                 <div class="container mx-auto px-4">
                     <div class="grid md:grid-cols-3 gap-6 text-center">
-                        <div class="bg-green-800 p-6 rounded-lg shadow-md">
+                        <div class="bg-amber-800 p-6 rounded-lg shadow-md">
                             <i class="fas fa-users text-4xl mb-4 text-amber-300"></i>
                             <h3 class="text-xl font-bold mb-2">100+ Anggota</h3>
                             <p>Pramuka aktif dari kelas 7 hingga 9</p>
                         </div>
-                        <div class="bg-green-800 p-6 rounded-lg shadow-md">
+                        <div class="bg-amber-800 p-6 rounded-lg shadow-md">
                             <i class="fas fa-calendar-alt text-4xl mb-4 text-amber-300"></i>
                             <h3 class="text-xl font-bold mb-2">10+ Kegiatan</h3>
                             <p>Setiap tahunnya</p>
                         </div>
-                        <div class="bg-green-800 p-6 rounded-lg shadow-md">
+                        <div class="bg-amber-800 p-6 rounded-lg shadow-md">
                             <i class="fas fa-trophy text-4xl mb-4 text-amber-300"></i>
                             <h3 class="text-xl font-bold mb-2">Berprestasi</h3>
                             <p>Di berbagai event kepramukaan</p>
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
