--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
         </div>
         <!-- Mobile Menu -->
-        <div class="md:hidden hidden bg-green-900" id="mobile-menu">
+        <div class="md:hidden hidden bg-amber-800" id="mobile-menu">
             <ul class="flex flex-col space-y-3 p-4">
                 <li><a href="#home" class="nav-link block hover:text-amber-300 transition-all" data-page="home">Home</a></li>
                 <li><a href="#berita" class="nav-link block hover:text-amber-300 transition-all" data-page="berita">Berita</a></li>
@@ -73,7 +73,7 @@
             <!-- Profile Section -->
             <div class="container mx-auto px-4 py-12">
                 <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6 md:p-8">
-                    <h2 class="text-2xl md:text-3xl font-bold text-green-800 mb-6 text-center">Profil Dewan Penggalang</h2>
+                    <h2 class="text-2xl md:text-3xl font-bold text-black-800 mb-6 text-center">Profil Dewan Penggalang</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
                             <p class="text-gray-700 mb-4">Dewan Penggalang SMPIT PERMATA Mojokerto adalah organisasi intra sekolah yang bertanggung jawab dalam mengkoordinasikan kegiatan kepramukaan di sekolah kami.</p>
@@ -114,7 +114,7 @@
         <!-- Berita Page -->
         <section id="berita-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Berita Terbaru</h2>
+                <h2 class="text-3xl font-bold text-black-800 mb-8 text-center">Berita Terbaru</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Berita 1 -->
                     <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
@@ -169,7 +169,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
         <!-- Event Page -->
         <section id="event-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Event Kegiatan</h2>
+                <h2 class="text-3xl font-bold text-black-800 mb-8 text-center">Event Kegiatan</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- Event 1 -->
                     <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
@@ -234,7 +234,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
         <!-- Divisi Page -->
         <section id="divisi-page" class="page hidden">
             <div class="container mx-auto px-4 py-12">
-                <h2 class="text-3xl font-bold text-green-800 mb-8 text-center">Struktur Kepengurusan</h2>
+                <h2 class="text-3xl font-bold text-black-800 mb-8 text-center">Struktur Kepengurusan</h2>
                 
                 <!-- Kepengurusan Inti -->
                 <div class="mb-16">
@@ -856,6 +856,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
     </script>
 </body>
 </html>
+
 
 
 
