--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-//<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -159,7 +159,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
                     </div>             
                     <!-- Berita 4 -->  
                      <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1762591868938-2b4a44970747?w=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <img src="https://images.unsplash.com/photo-1762595823686-73a9b67ec959?w=500" alt="Berita 2" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <span class="text-sm text-gray-500">10 - 12 OKTOBER 2025</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3"> Lomba Tingkat II PRAMUKA PENGGALANG</h3>
@@ -827,6 +827,7 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
     </script>
 </body>
 </html>
+
 
 
 
