--- a/index.html
+++ b/index.html
@@ -180,6 +180,24 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
                     </div>
 
                     <!-- Berita 6 -->
+                      <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
+                        <img src="https://images.unsplash.com/photo-1762645522649-bffb37ccbe91?W=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <span class="text-sm text-gray-500">23-25 Oktober</span>
+                            <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">LAGA IV</h3>
+                            <p class="text-gray-700 mb-4">
+Alhamdulillah, dengan penuh rasa syukur dan kebahagiaan, kegiatan Kemah Laga 4 yang diselenggarakan di Jember pada tanggal 23–25 Oktober 2025 telah terlaksana dengan lancar dan penuh semangat.
+
+Kegiatan ini menjadi wadah pembentukan karakter, kedisiplinan, dan semangat kebersamaan bagi seluruh peserta. Melalui berbagai kegiatan dan tantangan yang diberikan, kami belajar arti kerjasama, tanggung jawab, serta keikhlasan dalam berjuang dan berbakti.
+
+Terima kasih kami sampaikan kepada panitia, pembina, pendamping, serta seluruh peserta yang telah berpartisipasi dengan semangat luar biasa. Tak lupa apresiasi juga kepada seluruh pihak yang telah mendukung dan mendoakan sehingga acara ini dapat berjalan dengan sukses.
+
+Semoga pengalaman berharga di Kemah Laga 4 Jember ini menjadi bekal untuk menjadi generasi tangguh, berakhlak, dan siap mengabdi untuk bangsa dan agama. Alhamdulillah Regu Garuda pangkalan SMPIT Permata Kota Mojokerto telah memenangkan juara 3 lomba LKBB (Latihan Keterampilan Baris Berbaris). Selamat atas kejuaraan yang telah diraih ! Tetap semangat dan pantang menyerah untuk mengikuti lomba lainnya
+
+Sampai jumpa di Kemah Laga berikutnya!
+🔥 Satyaku Kudarmakan, Darmaku Kubaktikan! 🔥</p>                          
+                        </div>
+                    </div>
                         </div>
                     </div>
                 </div>
@@ -262,7 +280,7 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-green-800 mb-3">Pemantapan calon Garuda</h3>
-                            <p class="text-gray-700 mb-4">Kemah pemantapan calon Garuda penggalang".</p>
+                            <p class="text-gray-700 mb-4">Kemah pemantapan calon Garuda penggalang.</p>
                             <div class="flex items-center text-sm text-gray-500">
                                 <i class="fas fa-map-marker-alt mr-2"></i>
                                 <span>Camping Ground Taman Bahari (TBM) Rejoto, Kota Mojokerto</span>
@@ -270,7 +288,20 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
                         </div>
                     </div>          
                     <!-- Event 6 -->
-                     
+                     <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
+                        <div class="bg-amber-600 text-white p-4 text-center">
+                            <div class="text-2xl font-bold">23-25</div>
+                            <div class="text-sm">Oktober 2025</div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-green-800 mb-3">LAGA IV</h3>
+                            <p class="text-gray-700 mb-4">Kemah Laga IV yang di adakan oleh SAKO PRAMUKA SIT JAWA TIMUR</p>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <i class="fas fa-map-marker-alt mr-2"></i>
+                                <span>Jember,PPG Sido Mulyo</span>
+                            </div>
+                        </div>
+                    </div>          
                         </div>
                     </div>
                 </div>
@@ -827,6 +858,7 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
     </script>
 </body>
 </html>
+
 
 
 
