--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@ Sampai jumpa di Kemah Laga berikutnya!
 🔥 Satyaku Kudarmakan, Darmaku Kubaktikan! 🔥</p>                          
                         </div>
                     </div>
+                    <!--Berita 7-->
+                      <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
+                        <img src="https://images.unsplash.com/photo-1762676128013-57af296f1f82?w=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <div class="p-6">
+                            <span class="text-sm text-gray-500">27 September 2025</span>
+                            <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">Laga 3</h3>
+                            <p class="text-gray-700 mb-4">Alhamdulillah selamat atas kemenangan LAGA 3 yang telah diselenggarakan di MA Permata Mojokerto
+Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan. 7 Regu berasal dari pangkalan SMPIT Permata Mojokerto telah memenangkan beberapa lomba, dan mendapatkan Juara Umum. Terimakasih atas perjuangan yang luar biasa</p>                          
+                        </div>
+                    </div>
                         </div>
                     </div>
                 </div>
@@ -212,8 +222,8 @@ Sampai jumpa di Kemah Laga berikutnya!
                     <!-- Event 1 -->
                     <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
                         <div class="bg-amber-600 text-white p-4 text-center">
-                            <div class="text-2xl font-bold">25</div>
-                            <div class="text-sm">18-19 Juli 2025</div>
+                            <div class="text-2xl font-bold">18-19</div>
+                            <div class="text-sm"> Juli 2025</div>
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-green-800 mb-3">Perkemahan Jum'at-Sabtu (PERJUSA)</h3>
@@ -301,7 +311,22 @@ Sampai jumpa di Kemah Laga berikutnya!
                                 <span>Jember,PPG Sido Mulyo</span>
                             </div>
                         </div>
-                    </div>          
+                    </div>    
+                    <!--Berita 7 -->
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
+                        <div class="bg-amber-600 text-white p-4 text-center">
+                            <div class="text-2xl font-bold">23-25</div>
+                            <div class="text-sm">Oktober 2025</div>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-green-800 mb-3">LAGA III</h3>
+                            <p class="text-gray-700 mb-4">Lomba Pramuka SIT Laga III Se kota Mojokerto</p>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <i class="fas fa-map-marker-alt mr-2"></i>
+                                <span>Lapangan MA Permata</span>
+                            </div>
+                        </div>
+                    </div>    
                         </div>
                     </div>
                 </div>
@@ -858,6 +883,7 @@ Sampai jumpa di Kemah Laga berikutnya!
     </script>
 </body>
 </html>
+
 
 
 
