--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@ Sampai jumpa di Kemah Laga berikutnya!
                     </div>
                     <!--Berita 7-->
                       <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1762676128013-57af296f1f82?w=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <img src="https://images.unsplash.com/photo-1762676128013-57af296f1f82?w=500" alt="Berita 2" class="w-full h-72 object-cover rounded-x1 transition-all"/>
                         <div class="p-6">
                             <span class="text-sm text-gray-500">27 September 2025</span>
-                            <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">Laga 3</h3>
-                            <p class="text-gray-700 mb-4">Alhamdulillah selamat atas kemenangan LAGA 3 yang telah diselenggarakan di MA Permata Mojokerto
+                            <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">Laga III</h3>
+                            <p class="text-gray-700 mb-4">Alhamdulillah selamat atas kemenangan LAGA III yang telah diselenggarakan di MA Permata Mojokerto
 Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan. 7 Regu berasal dari pangkalan SMPIT Permata Mojokerto telah memenangkan beberapa lomba, dan mendapatkan Juara Umum. Terimakasih atas perjuangan yang luar biasa</p>                          
                         </div>
                     </div>
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
