--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ kalian dan menjadikan kepengurusan ini penuh keberkahan dan kebermanfaatan. Aami
                     </div>             
                     <!-- Berita 4 -->  
                      <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1762595823686-73a9b67ec959?w=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <img src="https://images.unsplash.com/photo-1762591868938-2b4a44970747?=500" alt="Berita 2" class="w-full h-85 object-cover rounded-x1 transition-all"/>
                         <div class="p-6">
                             <span class="text-sm text-gray-500">10 - 12 OKTOBER 2025</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3"> Lomba Tingkat II PRAMUKA PENGGALANG</h3>
@@ -200,7 +200,7 @@ Sampai jumpa di Kemah Laga berikutnya!
                     </div>
                     <!--Berita 7-->
                       <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1762676128013-57af296f1f82?w=500" alt="Berita 2" class="w-full h-72 object-cover rounded-x1 transition-all"/>
+                        <img src="https://images.unsplash.com/photo-1762676128013-57af296f1f82?w=500" alt="Berita 2" class="w-full h-83 object-cover rounded-x1 transition-all"/>
                         <div class="p-6">
                             <span class="text-sm text-gray-500">27 September 2025</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">Laga III</h3>
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
