--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                     <!-- Berita 3 -->   
                       <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1756507987507-b7d395ff2656?w=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <img src="https://images.unsplash.com/photo-1762679139184-eda8606fec90?=500" alt="Berita 2" class="w-full h-85 object-cover rounded-x1 transition-all"/>
                         <div class="p-6">
                             <span class="text-sm text-gray-500">29 Agustus 2025</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">SELAMAT ATAS DILANTIK NYA DEWAN PENGGALANG MASA BAKTI 2025-2026</h3>
@@ -181,7 +181,7 @@ Pramuka! Tangkas, tangguh, terampil! ✊🏻</p>
 
                     <!-- Berita 6 -->
                       <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover transition-all">
-                        <img src="https://images.unsplash.com/photo-1762645522649-bffb37ccbe91?W=500" alt="Berita 2" class="w-full h-48 object-cover">
+                        <img src="https://images.unsplash.com/photo-1762678704931-b923a7e92503?=500" alt="Berita 2" class="w-full h-84 object-cover">
                         <div class="p-6">
                             <span class="text-sm text-gray-500">23-25 Oktober</span>
                             <h3 class="text-xl font-bold text-green-800 mt-2 mb-3">LAGA IV</h3>
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
