--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body class="bg-amber-50 font-sans">
     <!-- Header -->
-    <header class="bg-amber-800 text-white sticky top-0 z-50 shadow-md">
+    <header class="bg-amber-600 text-white sticky top-0 z-50 shadow-md">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Logo SMPIT PERMATA" class="h-12 mr-3">
@@ -274,7 +274,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
                             <div class="text-sm">Oktober 2025</div>
                         </div>
                         <div class="p-6">
-                            <h3 class="text-xl font-bold text-green-800 mb-3">Memperingati hari pramuka </h3>
+                            <h3 class="text-xl font-bold text-green-800 mb-3">LT II </h3>
                             <p class="text-gray-700 mb-4">Lomba Tingkat II yang diselenggarakan oleh kwartir ranting di kantor kecamatan Kranggan".</p>
                             <div class="flex items-center text-sm text-gray-500">
                                 <i class="fas fa-map-marker-alt mr-2"></i>
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
