--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .active {
-            color: #d97706;
+            color: #000000;
             font-weight: 600;
         }
         .hero {
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
