--- a/index.html
+++ b/index.html
@@ -767,8 +767,8 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
                                     <i class="fab fa-instagram text-green-700 text-xl"></i>
                                 </div>
                                 <div>
-                                    <h4 class="font-bold text-green-800">Instagram</h4>
-                                    <p class="text-gray-700">spartascouting</p>
+                                 <a href="https://www.instagram.com/spartascouting?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="text-green-900 font-bold hover:text-green-900 underline"> Ikuti Instagram SPARTASCOUTING</a>
+                                   
                                 </div>
                             </div>
                         </div>
@@ -883,6 +883,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
