--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             transition: all 0.3s ease;
         }
     </style>
+    <link rel="Icon" href="apple-icon-60x60.png" type="image/png">
 </head>
 <body class="bg-amber-50 font-sans">
     <!-- Header -->
@@ -883,6 +884,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
