--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         .card-hover:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(255, 0, 0, 0.808);
+            box-shadow: 0 10px 20px rgba(0,0,0);
         }
         .transition-all {
             transition: all 0.3s ease;
@@ -838,7 +838,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
                 </div>
             </div>
             
-            <div class="border-t border-green-800 mt-8 pt-6 text-center">
+            <div class="border-t border-white-800 mt-8 pt-6 text-center">
                 <p>&copy; 2025 Dewan Penggalang SMPIT PERMATA Mojokerto. All rights reserved.</p>
             </div>
         </div>
@@ -884,6 +884,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
