--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="bg-amber-600 text-white sticky top-0 z-50 shadow-md">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500" alt="Logo SMPIT PERMATA" class="h-12 mr-3">
+               <img src="https://images.unsplash.com/photo-1756298243047-12d8aecb407f?w=500"  alt="Logo SMPIT PERMATA" class="w-12 h-12 mr-3 object-contain rounded-xl transition-all"/>
                 <h1 class="text-xl font-bold">Dewan Penggalang SMPIT PERMATA</h1>
             </div>
             <nav class="hidden md:block">
@@ -884,6 +884,7 @@ Kerja keras, Kekompakkan, dan semangat juang membuahkan hasil yang membanggakan.
     </script>
 </body>
 </html>
+
 
 
 
